# testing-faiss

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  faiss_utils.cpp  kmer_utils.cpp  kmer_utils_test.cpp  main.cpp  parser.cpp  parser_test.cpp  scanner.cpp  scanner_test.cpp  vcpkg.json
.zed/: debug.json
cmake/presets/: linux.json  windows.json
data/: dengue_ref_reads.fq  dengue_ref_sequences.fasta.fai  dengue_ref_sequences.index.meta.tsv  sequences_20260415_5314042.fasta  sequences_20260415_5314042.fasta.fai  test.fq  test_header_only.fa  test_invalid_header.fq  test_invalid_separator.fq  test_multi.fa  test_multi.fq  test_quality_mismatch.fq  test_single.fa
include/: faiss_utils.hpp  io.hpp  kmer_utils.hpp  scanner.hpp
src/: CMakeLists.txt  faiss_utils.cpp  io.cpp  scanner.cpp
tests/: CMakeLists.txt  kmer_utils_test.cpp  scanner_test.cpp
